# OpenQ4

./: .gitignore  AGENTS.md  README.md  meson.build  meson_options.txt
_save/pk4_014/materials/: invisible.mtr
build_debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  OpenQ4.slnx  OpenQ4.vcxproj  OpenQ4.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_debug/OpenQ4.dir/Debug/: OpenQ4.exe.recipe  OpenQ4Version.res
build_debug/OpenQ4.dir/Debug/OpenQ4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
build_debug/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_debug/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
build_debug/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_debug/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
doc/: input-key-matrix.md  official-pk4-checksums.md  platform-support.md  quake4-bse-research-and-implementation-plan.md  release-completion.md
doc/legacy/: README.md
install/openbase/guis/: hud.gui  hud_strogg.gui  mphud.gui  mpmain.gui
openbase/: meson.build
q4base/glprogs/: cgfp_interaction.cg
q4base/guis/assets/: scrollbar_thumb.tga  scrollbarv.tga
q4base/maps/mp/: q4dm1.cm  q4dm6.cm
q4base/materials/: hardwareshaders.mtr  weapons.mtr
q4base/strings/: english_openq4.lang
src/: CMakeLists.txt
src/bse/: BSE.h  BSEInterface.h  BSE_Effect.cpp  BSE_EffectTemplate.cpp  BSE_Envelopes.cpp  BSE_Manager.cpp  BSE_ParseParticle2.cpp  BSE_Particle.cpp  BSE_Particle.h  BSE_Segment.cpp  BSE_SegmentRuntime.cpp  BSE_SegmentTemplate.cpp  BSE_SpawnDomains.cpp
src/cm/: CollisionModel_debug.cpp  CollisionModel_files.cpp
src/framework/: CVarSystem.cpp  Common.cpp  Console.cpp  DeclManager.cpp  EditField.cpp  EventLoop.cpp  FileSystem.cpp  FileSystem.h  KeyInput.cpp  Session.cpp  Session.h  Session_local.h  Session_menu.cpp  UsercmdGen.cpp  licensee.h
src/framework/async/: AsyncClient.cpp  AsyncNetwork.cpp
src/game/: Entity.cpp  Game_local.cpp  Game_local.h  Game_network.cpp  Game_render.cpp  Light.cpp  MultiplayerGame.cpp  Player.cpp  PlayerView.cpp
src/game/anim/: Anim_Blend.cpp
src/game/client/: ClientEffect.cpp
src/game/gamesys/: SysCvar.cpp  SysCvar.h
src/idlib/: Heap.cpp  LangDict.cpp  Lexer.cpp  Lexer.h  Lib.cpp  Parser.cpp  StrStatic.h
src/idlib/math/: Curve.h
src/renderer/: BinaryImage.cpp  GuiModel.cpp  Image_intrinsic.cpp  Image_load.cpp  Material.cpp  Material.h  ModelDecal.cpp  ModelDecal.h  RenderSystem.cpp  RenderSystem.h  RenderSystem_init.cpp  RenderWorld.cpp  RenderWorld_demo.cpp  RenderWorld_load.cpp  draw_arb2.cpp  draw_common.cpp  tr_backend.cpp  tr_font.cpp  tr_light.cpp  tr_lightrun.cpp  tr_local.h  tr_main.cpp
src/renderer/OpenGL/: gl_Image.cpp
src/sound/: snd_shader.cpp  snd_system.cpp
src/sound/OpenAL/: AL_SoundSample.cpp  AL_SoundSample.h  AL_SoundVoice.cpp
src/sys/: AutoVersion.h  sys_local.cpp  sys_public.h
src/sys/linux/: dedicated.cpp  main.cpp
src/sys/osx/: DOOMController.mm  Info.plist  macosx_event.mm  macosx_sys.mm  macosx_utils.mm
src/sys/osx/English.lproj/: InfoPlist.strings  Localizable.strings
src/sys/osx/English.lproj/ASLCore.nib/: objects.xib
src/sys/osx/French.lproj/: InfoPlist.strings  Localizable.strings
src/sys/osx/French.lproj/ASLCore.nib/: objects.xib
src/sys/osx/OpenQ4.xcodeproj/: project.pbxproj
src/sys/posix/: posix_input.cpp
src/sys/win32/: win_crash.cpp  win_crash.h  win_input.cpp  win_local.h  win_main.cpp  win_sdl3.cpp  win_shared.cpp  win_syscon.cpp
src/sys/win32/rc/: AFEditor.rc  OpenQ4Version.rc  ParticleEditor.rc  Radiant.rc  doom.rc
src/sys/win32/sdk/: OpenQ4SDK.nsi  prepare.py
src/tools/Help/: MVH_Overview.htm
src/tools/radiant/: WIN_DLG.CPP
src/ui/: ChoiceWindow.cpp  DeviceContext.cpp  DeviceContext.h  GuiScript.cpp  GuiScript.h  SimpleWindow.cpp  SimpleWindow.h  UserInterface.cpp  UserInterfaceLocal.h  Window.cpp  Window.h  Winvar.h
subprojects/: sdl3.wrap
subprojects/glew/: meson.build
subprojects/glew/include/: glew.h
subprojects/glew/src/: glew.c
subprojects/openal-soft-prebuilt/: meson.build
subprojects/packagefiles/sdl3/: windows-opengl.diff
subprojects/stb_vorbis/: meson.build
tmp/: capture_openq4.ps1
user-docs/: display-settings.md
